# FlappyBird

./: CMakeLists.txt  README.md  main.cpp
Character/: Bird.cpp  Bird.h  CMakeLists.txt
Core/: BitMapFont.cpp  BitMapFont.h  CMakeLists.txt  Context.cpp  Context.h  GameController.cpp  GameController.h  Signal.cpp  Signal.h  Timer.hpp  Tweeny.cpp  Tweeny.h
Enviroment/: CMakeLists.txt  Pipe.cpp  Pipe.h  PipesCreator.cpp  PipesCreator.h
Utils/: CMakeLists.txt  ScrollingBackground.cpp  ScrollingBackground.h
